src/test/ui/feature-gate-decl_macro.stderr
error[E0658]: `macro` is experimental (see issue #39412)
  --> $DIR/feature-gate-decl_macro.rs:13:1
   |
LL | macro m() {} //~ ERROR `macro` is experimental (see issue #39412)
   | ^^^^^^^^^^^^
   |
   = help: add #![feature(decl_macro)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
